# lintropy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  lintropy.toml  mkdocs.yml
.github/workflows/: ci.yaml  pages.yaml  release.yaml
.lintropy/: no-dbg.rule.yaml  no-todo.rule.yaml  no-unwrap.rule.yaml
crates/lintropy-cli/src/: agent_settings.rs  cli.rs  main.rs
crates/lintropy-cli/src/commands/: explain.rs  hook.rs  init.rs  mod.rs  rules.rs  schema.rs
crates/lintropy-cli/tests/: cli_explain_describe.rs  cli_hook.rs  cli_init.rs  cli_rules_describe.rs  cli_schema.rs
crates/lintropy-cli/tests/common/: describe.rs
crates/lintropy-core/: Cargo.toml
crates/lintropy-core/src/: config.rs  discovery.rs  engine.rs  error.rs  fix.rs  lib.rs  predicates.rs  schema.rs  suppress.rs  template.rs
crates/lintropy-core/tests/: config_loader.rs  engine_snapshots.rs  fix_apply.rs  suppress_filter.rs
crates/lintropy-core/tests/fixtures/engine/: sample.rs
crates/lintropy-core/tests/snapshots/: engine_snapshots__engine_canonical_rules.snap
crates/lintropy-langs/: Cargo.toml
crates/lintropy-output/: Cargo.toml
crates/lintropy-output/src/: json.rs  lib.rs  text.rs
crates/lintropy-output/tests/: .reporters.rs.pending-snap  reporters.rs
docs/: cli.md  configuration.md  editor-and-agent-setup.md  index.html  overview.md  rule-language.md  styles.css
docs/integrations/: claude-code.md  index.md  jetbrains.md  other-agents.md  other-editors.md  post-write-hook.md  vscode.md
docs/stylesheets/: extra.css
editors/claude-code/: README.md
editors/claude-code/skills/lintropy/: SKILL.md
editors/jetbrains/: README.md
editors/jetbrains/lsp4ij-template/: clientSettings.json  template.json
editors/jetbrains/lsp4ij-template-dev/: clientSettings.json  template.json
editors/schemas/: lintropy-rule.schema.json  lintropy-rules.schema.json  lintropy.schema.json
editors/textmate/Lintropy Query.tmbundle/: info.plist
editors/vscode/lintropy/: .vscodeignore  README.md  esbuild.mjs  language-configuration.json  package.json
editors/vscode/lintropy-query-syntax/: LICENSE.txt  package.json
editors/vscode/lintropy-query-syntax/syntaxes/: lintropy-query-yaml.injection.tmLanguage.json  lintropy-query.tmLanguage.json
editors/vscode/lintropy/src/: extension.ts
examples/go-demo/: README.md  lintropy.yaml
examples/go-demo/.lintropy/: no-fmt-println.rule.yaml  no-todo-comment.rule.yaml
examples/go-demo/samples/comments/: todo.go
examples/go-demo/src/: main.go
examples/python-demo/: README.md
examples/python-demo/.lintropy/: no-print.rule.yaml  no-todo-comment.rule.yaml
examples/python-demo/samples/comments/: todo.py
examples/python-demo/src/: app.py
examples/rust-demo/: Cargo.toml  README.md
examples/rust-demo/.lintropy/: no-println.rule.yaml  no-unwrap.rule.yaml  project-rules.rules.yaml  style.rules.yaml
examples/rust-demo/samples/architecture/: domain_violation.rs
examples/rust-demo/samples/banned/: dbg_usage.rs
examples/rust-demo/samples/comments/: todo_ticket.rs
examples/rust-demo/samples/deprecations/: old_config.rs
examples/rust-demo/samples/migrations/: log_usage.rs
examples/rust-demo/samples/safety/: missing_comment.rs  with_comment.rs
examples/rust-demo/samples/taxonomy/: metrics.rs
examples/rust-demo/samples/tests/: stray_ignore.rs  tokio_naming.rs
examples/rust-demo/samples/tests/flaky/: allowed_ignore.rs
examples/rust-demo/src/: main.rs  user.rs
examples/rust-demo/tests/: smoke.rs
examples/typescript-demo/: README.md
examples/typescript-demo/.lintropy/: no-any-type.rule.yaml  no-console-log.rule.yaml  no-todo-comment.rule.yaml
examples/typescript-demo/samples/comments/: todo.ts
examples/typescript-demo/src/: Card.tsx  app.ts
overrides/: main.html
packaging/homebrew/: bump-formula.yaml  lintropy.rb.template
scripts/: check-editor-grammars.sh  export-editor-schemas.sh
skill/: SKILL.md
specs/: 2026-04-18-multilang-support-plan.md  2026-04-18-multilang-support.md  comparison.md
specs/jelle/: 2026-04-18-lintropy-design.md
specs/merged/: 2026-04-18-lintropy-merged.md
specs/rens/: lintropy_dsl_mvp_df2a61d0.plan.md
src/: agent_settings.rs  cli.rs  config.rs  editor_assets.rs  engine.rs  exit.rs  langs.rs  lib.rs  main.rs  skill.rs  walk.rs
src/commands/: check.rs  explain.rs  hook.rs  init.rs  install_editor.rs  install_lsp_extension.rs  install_query_extension.rs  install_textmate_bundle.rs  mod.rs  rules.rs  schema.rs  ts_parse.rs  validate.rs
src/commands/install/: claude_code.rs  mod.rs
src/core/: config.rs  discovery.rs  engine.rs  fix.rs  mod.rs  predicates.rs  schema.rs  suppress.rs  types.rs
src/lsp/: actions.rs  completion.rs  diagnostics.rs  document.rs  mod.rs  position.rs  rule_lint.rs  semantic_tokens.rs  server.rs
src/output/: json.rs  mod.rs  text.rs
tests/: cli_check.rs  cli_explain.rs  cli_init.rs  cli_install_editor_assets.rs  cli_rules.rs  cli_rules_describe.rs  cli_ts_parse.rs  cli_validate.rs  config_loader.rs  engine_snapshots.rs  fix_apply.rs  integration_check.rs  integration_fix.rs  integration_init.rs  integration_lsp.rs  integration_multilang.rs  reporters.rs  suppress_filter.rs
tests/common/: mod.rs
tests/fixtures/engine/: skip.rs
tests/snapshots/: engine_snapshots__engine_canonical_rules.snap
website/: package.json  pnpm-lock.yaml  vite.config.ts
website/src/: vite-env.d.ts
website/src/components/: Header.tsx
(+4 files in other folders)
