[workspace]
resolver = "2"
members = [
    "crates/lintropy-core",
    "crates/lintropy-langs",
    "crates/lintropy-rules",
    "crates/lintropy-output",
    "crates/lintropy-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/anthropics/lintropy"
authors = ["lintropy contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
thiserror = "2"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
ignore = "0.4"
globset = "0.4"
similar = "2"
tempfile = "3"
