[package]
name = "lintropy"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/Typiqally/lintropy"
authors = ["lintropy contributors"]
readme = "README.md"
keywords = ["linter", "tree-sitter", "static-analysis", "yaml", "agent"]
categories = ["command-line-utilities", "development-tools"]
description = "Lintropy: structural linter driven by tree-sitter queries and repo-local YAML rules."
build = "build.rs"

[[bin]]
name = "lintropy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["lang-go", "lang-python", "lang-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-python = ["dep:tree-sitter-python"]
lang-typescript = ["dep:tree-sitter-typescript"]

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
include_dir = "0.7"
owo-colors = { version = "4", features = ["supports-colors"] }
rayon = "1"
regex = "1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tower-lsp = "0.20"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-go = { version = "0.21", optional = true }
tree-sitter-python = { version = "0.21", optional = true }
tree-sitter-typescript = { version = "0.21", optional = true }

[build-dependencies]
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
predicates = "3"
