[package]
name = "lintropy-langs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Language registry for lintropy. Isolates heavy tree-sitter grammar deps."

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
